package savetheking.game;

public interface Observer {
    void update();
}
